--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,8 +1,16 @@
-$color-pink: #FF00AA;
-$color-blue: #2176FF;
-$color-red: #C30000;
+//original
+// $color-pink: #FF00AA;
+// $color-blue: #2176FF;
+// $color-red: #C30000;
+// $color-orange: #FF6B35;
+// $color-purple: #BF00FF;
+
+//temp
+$color-pink: #C30000;
+$color-blue: #084d27;
 $color-orange: #FF6B35;
-$color-purple: #BF00FF;
+$color-purple: #1bb35f;
+$color-red: #1bb35f;
 
 // $color-pink: #FF00AA;
 // $color-blue: #2176FF;
