--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,11 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  // font-family: 'Poppins', sans-serif;
+  // font-family: 'Ubuntu Mono', monospace;
+  // font-family: 'Fira Mono', monospace;
+  // font-family: 'Teko', sans-serif;
+  // font-family: 'Oswald', sans-serif;
+  // font-family: 'Trispace', sans-serif;
+  font-family: 'Roboto Mono', monospace;
   font-weight: 400;
   line-height: 1.3;
   color: $color-white;
