--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,13 @@
   margin-bottom: 25rem;
 }
 
+.hero{
+  &__logo{
+    height: 9rem;
+    // #1bb35f
+  }
+}
+
 .about {
   position: relative;
   margin-bottom: 25rem;
