--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -7,7 +7,7 @@
 
 //temp
 $color-pink: #C30000;
-$color-blue: #084d27;
+$color-blue: #1bb35f;
 $color-orange: #FF6B35;
 $color-purple: #1bb35f;
 $color-red: #1bb35f;
@@ -26,6 +26,5 @@ $color-grey-dark-text: #111111;
 $color-grey-dark-body: #0C0A0A;
 
 $default-font-size: 1.6rem;
-
 
 $gutter-right: 2rem;
