--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,7 +15,13 @@
   .heading-primary{
     text-align: center;
     &--sub{
-      transform: translateX(-15px);
+      transform: translateY(-15px);
+    }
+  }
+  .hero{
+    &__logo{
+      height: 9rem;
+      // #1bb35f
     }
   }
 }
