--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,16 @@ body {
   box-sizing: border-box;
   background-color: #000;
   overflow-x: hidden;
-  overflow-y: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 2px;
+  height: 4px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #1bb35f;
+  border-radius: 100px;
 }
 
 body {
@@ -34,13 +43,16 @@ a {
 }
 
 .heading-primary--sub {
+  text-transform: uppercase;
   display: block;
   font-weight: 400;
-  font-size: 2.9rem;
+  font-size: 2rem;
+  letter-spacing: 4px;
+  font-weight: 700;
 }
 
 .heading-primary--sub-large {
-  font-size: 4rem;
+  font-size: 2.2rem;
 }
 
 .heading-secondary {
@@ -216,12 +228,16 @@ a {
 }
 
 .btn--large {
-  font-size: 2.1rem;
+  clip-path: polygon(8% 0, 100% 1%, 100% 78%, 91% 100%, 0 100%, 0 22%);
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  font-weight: 400;
   width: 19.4rem;
-  height: 7.4rem;
-  border-radius: 8.4rem;
+  height: 6rem;
+  border-radius: 4px;
   text-align: center;
-  line-height: 7.4rem;
+  line-height: calc(6rem - 1px);
   vertical-align: center;
 }
 
@@ -230,44 +246,7 @@ a {
 }
 
 .btn--ring {
-  border: 1px solid #084d27;
-}
-
-.btn--anim {
-  border: 1px solid #084d27;
-  color: #fff;
-  position: relative;
-  overflow: hidden;
-  background: transparent;
-  transition: all .35s;
-}
-
-.btn--anim::before, .btn--anim::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 100%;
-  top: -100%;
-  left: 0;
-  background: #084d27;
-  z-index: -1;
-  transition: all .35s;
-}
-
-.btn--anim::before {
-  opacity: .5;
-}
-
-.btn--anim::after {
-  transition-delay: .2s;
-}
-
-.btn--anim:hover {
-  color: #fff;
-}
-
-.btn--anim:hover::before, .btn--anim:hover::after {
-  top: 0;
+  border: 1px solid #1bb35f;
 }
 
 .img-grid__container {
@@ -1000,10 +979,15 @@ a {
 }
 
 .header .heading-primary--sub {
-  transform: translateX(-15px);
+  transform: translateY(-15px);
+}
+
+.header .hero__logo {
+  height: 9rem;
 }
 
 .nav {
+  text-transform: uppercase;
   display: flex;
   flex-direction: row;
   position: fixed;
@@ -1045,10 +1029,11 @@ a {
 }
 
 .nav__item--reg {
-  border: 1px solid #1bb35f;
+  border: 2px solid #1bb35f;
   padding: 1rem 2rem;
-  border-radius: 40px;
+  border-radius: 4px;
   cursor: pointer;
+  margin-left: 5rem;
 }
 
 .nav.hidden {
@@ -1061,10 +1046,6 @@ a {
 
 .header {
   margin-bottom: 25rem;
-}
-
-.hero__logo {
-  height: 9rem;
 }
 
 .about {
