--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -13,5 +13,13 @@ body {
   box-sizing: border-box;
   background-color: $color-black;
   overflow-x: hidden;
-  overflow-y: hidden;
+  // overflow-y: hidden;
+  &::-webkit-scrollbar{
+    width: 2px;
+    height: 4px;
+  }
+  &::-webkit-scrollbar-thumb{
+    background-color: $color-red;
+    border-radius: 100px;
+  }
 }
