--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,13 +24,16 @@ a {
   }
 
   &--sub {
+    text-transform: uppercase;
     display: block;
     font-weight: 400;
-    font-size: 2.9rem;
+    font-size: 2rem;
+    letter-spacing: 4px;
+    font-weight: 700;
   }
 
   &--sub-large {
-    font-size: 4rem;
+    font-size: 2.2rem;
   }
 }
 
