--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,13 +6,18 @@
   }
   
   &--large {
-    font-size: 2.1rem;
+    clip-path: polygon(8% 0, 100% 1%, 100% 78%, 91% 100%, 0 100%, 0 22%);
+    font-size: $default-font-size;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    font-weight: 400;
     width: 19.4rem;
     //2.621
-    height: 7.4rem;
-    border-radius: 8.4rem;
+    height: 6rem;
+    // border-radius: 8.4rem;
+    border-radius: 4px;
     text-align: center;
-    line-height: 7.4rem;
+    line-height: calc(6rem - 1px);
     vertical-align: center;
   }
 
@@ -24,42 +29,42 @@
     border: 1px solid $color-blue;
   }
 
-  &--anim {
-    border: 1px solid $color-blue;
-    color: $color-white;
-    position: relative;
-    overflow: hidden;
-    background: transparent;
-    transition: all .35s;
+  // &--anim {
+  //   border: 1px solid $color-blue;
+  //   color: $color-white;
+  //   position: relative;
+  //   overflow: hidden;
+  //   background: transparent;
+  //   transition: all .35s;
 
-    &::before,
-    &::after {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 100%;
-      top: -100%;
-      left: 0;
-      background: $color-blue;
-      z-index: -1;
-      transition: all .35s;
-    }
+  //   &::before,
+  //   &::after {
+  //     position: absolute;
+  //     content: "";
+  //     width: 100%;
+  //     height: 100%;
+  //     top: -100%;
+  //     left: 0;
+  //     background: $color-blue;
+  //     z-index: -1;
+  //     transition: all .35s;
+  //   }
 
-    &::before{
-      opacity: .5;
-    }
+  //   &::before{
+  //     opacity: .5;
+  //   }
     
-    &::after{
-      transition-delay: .2s;
-    }
+  //   &::after{
+  //     transition-delay: .2s;
+  //   }
     
-    &:hover{
-      color: $color-white;
-    }
+  //   &:hover{
+  //     color: $color-white;
+  //   }
     
-    &:hover::before,
-    &:hover::after{
-      top: 0;
-    }
-  }
+  //   &:hover::before,
+  //   &:hover::after{
+  //     top: 0;
+  //   }
+  // }
 }
