--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,7 +9,7 @@
 $color-pink: #C30000;
 $color-blue: #1bb35f;
 $color-orange: #FF6B35;
-$color-purple: #1bb35f;
+$color-purple: rgb(27, 179, 95);
 $color-red: #1bb35f;
 
 // $color-pink: #FF00AA;
