--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -18,6 +18,7 @@ a {
 
 
 .heading-primary {
+  text-transform: uppercase;
   &--main {
     display: block;
     font-size: 9.7rem;
@@ -38,6 +39,7 @@ a {
 }
 
 .heading-secondary {
+  text-transform: uppercase;
   font-size: 6.4rem;
   color: $color-white;
   font-weight: 600;
@@ -70,6 +72,7 @@ a {
 }
 
 .heading-tertiary {
+  text-transform: uppercase;
   font-size: 2rem;
   font-weight: 300;
 }
