--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -19,6 +19,13 @@ a {
 
 .heading-primary {
   text-transform: uppercase;
+  &__coming-soon{
+    font-size: 4rem;
+    // font-style: italic;
+    font-weight: 400;
+    letter-spacing: 8px;
+    color: $color-red;
+  }
   &--main {
     display: block;
     font-size: 9.7rem;
