--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -13,10 +13,10 @@
     // background-color: #071013;
     // background: linear-gradient(90deg,#18112e 0,#321635 100%);
     background: linear-gradient(90deg, rgba(25,134,74,1) 0%, rgba(10,130,64,1) 100%);
-    padding: 15rem 0 25rem 0;
+    padding: 14rem 0 21rem 0;
     position: absolute;
     left: 0;
-    top: -18rem;
+    top: -15rem;
     width: 87%;
     font-weight: 300 ;
     font-size: 45vw;
@@ -278,5 +278,13 @@
         }
       }
     }
+  }
+}
+
+.sponsors-prev{
+  margin-bottom: 20rem;
+  .sponsors__img{
+    height: 15rem;
+    margin-bottom: -1rem;
   }
 }
