--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -140,6 +140,8 @@
       top: 50%;
       transform: translate(0, -50%);
       font-size: 2.4rem;
+      color: $color-red;
+      font-weight: 500;
     }
   }
   
