testimonial speaker name added

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -106,6 +106,15 @@
     font-size: 1.6rem;
     line-height: 1.7;
     font-weight: 500;
+
+    &__speaker{
+      font-size: 1.7rem;
+      line-height: 1.7;
+      font-weight: 500;
+      text-align: right;
+      margin-top: 1rem;
+      color: $color-red;
+    }
   }
 
   &__img-container {
