--- a/css/main.css
+++ b/css/main.css
@@ -1044,6 +1044,14 @@ a {
   line-height: 1.7;
   font-weight: 500;
 }
+.testimonial__quote__speaker {
+  font-size: 1.7rem;
+  line-height: 1.7;
+  font-weight: 500;
+  text-align: right;
+  margin-top: 1rem;
+  color: #1bb35f;
+}
 .testimonial__img-container {
   position: absolute;
   top: -3rem;
