Hero Section Responsive Fix

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: inherit;
 }
+.why-table{
+  display: none;
+}
+.testimonial{
+  display: none;
+}
 
 html {
   font-size: 62.5%;
