--- a/css/main.css
+++ b/css/main.css
@@ -3389,6 +3389,14 @@ html {
   box-sizing: inherit;
 }
 
+.why-table {
+  display: none;
+}
+
+.testimonial {
+  display: none;
+}
+
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
@@ -3491,6 +3499,18 @@ a {
   text-transform: uppercase;
   font-size: 2rem;
   font-weight: 300;
+}
+
+@media (max-width: 768px) {
+  .heading-secondary {
+    font-size: 4.8rem;
+  }
+}
+
+@media (max-width: 425px) {
+  .heading-secondary {
+    font-size: 3.8rem;
+  }
 }
 
 .u-margin-bottom-small {
@@ -3649,6 +3669,23 @@ a {
 .btn--ring {
   border: 2px solid #1bb35f;
   position: relative;
+}
+
+@media (max-width: 768px) {
+  .btn--large {
+    width: 16.5rem;
+    letter-spacing: 2px;
+  }
+}
+
+@media (max-width: 425px) {
+  .btn:not(:last-child) {
+    margin-right: 2.5rem;
+  }
+  .btn--large {
+    width: 15.5rem;
+    letter-spacing: 2px;
+  }
 }
 
 .img-grid__container {
@@ -3949,6 +3986,31 @@ a {
 
 .header .heading-primary--sub {
   letter-spacing: 6px;
+}
+
+@media (max-width: 768px) {
+  .header {
+    opacity: 1;
+  }
+  .header .hero__logo {
+    height: 8rem;
+  }
+  .header .heading-primary--sub {
+    letter-spacing: 1px;
+  }
+}
+
+@media (max-width: 425px) {
+  .header {
+    opacity: 1;
+  }
+  .header .hero__logo {
+    height: 7.4rem;
+  }
+  .header .heading-primary--sub {
+    letter-spacing: 0px;
+    font-weight: 400;
+  }
 }
 
 .nav {
