--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -83,3 +83,15 @@ a {
   font-size: 2rem;
   font-weight: 300;
 }
+
+@media(max-width: 768px){
+  .heading-secondary{
+    font-size: 4.8rem;
+  }
+}
+
+@media(max-width: 425px){
+  .heading-secondary{
+    font-size: 3.8rem;
+  }
+}
