--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -12,14 +12,11 @@
     letter-spacing: 4px;
     font-weight: 400;
     width: 23.4rem;
-    //2.621
     height: 6rem;
-    // border-radius: 8.4rem;
     border-radius: 4px;
     text-align: center;
     line-height: calc(6rem - 1px);
     vertical-align: center;
-    // background-color: $color-red;
   }
 
   &--red {
@@ -27,47 +24,27 @@
   }
 
   &--ring {
-    // background-color: $color-red;
     border: 2px solid $color-blue;
     position: relative;
   }
+}
 
-  // &--anim {
-  //   border: 1px solid $color-blue;
-  //   color: $color-white;
-  //   position: relative;
-  //   overflow: hidden;
-  //   background: transparent;
-  //   transition: all .35s;
-
-  //   &::before,
-  //   &::after {
-  //     position: absolute;
-  //     content: "";
-  //     width: 100%;
-  //     height: 100%;
-  //     top: -100%;
-  //     left: 0;
-  //     background: $color-blue;
-  //     z-index: -1;
-  //     transition: all .35s;
-  //   }
-
-  //   &::before{
-  //     opacity: .5;
-  //   }
-    
-  //   &::after{
-  //     transition-delay: .2s;
-  //   }
-    
-  //   &:hover{
-  //     color: $color-white;
-  //   }
-    
-  //   &:hover::before,
-  //   &:hover::after{
-  //     top: 0;
-  //   }
-  // }
+@media(max-width: 768px){
+  .btn{
+    &--large {
+      width: 16.5rem;
+      letter-spacing: 2px;
+    }
+  }
+}
+@media(max-width: 425px){
+  .btn{
+    &:not(:last-child) {
+      margin-right: 2.5rem;
+    }
+    &--large {
+      width: 15.5rem;
+      letter-spacing: 2px;
+    }
+  }
 }
