--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,3 +29,33 @@
     letter-spacing: 6px;
   }
 }
+@media(max-width: 768px){
+  .header{
+    opacity: 1;
+    .hero{
+      &__logo{
+        height: 8rem;
+        // #1bb35f
+      }
+    }
+    .heading-primary--sub{
+      letter-spacing: 1px;
+    }
+  }
+}
+
+@media(max-width: 425px){
+  .header{
+    opacity: 1;
+    .hero{
+      &__logo{
+        height: 7.4rem;
+        // #1bb35f
+      }
+    }
+    .heading-primary--sub{
+      letter-spacing: 0px;
+      font-weight: 400;
+    }
+  }
+}
